--- a/install.yml
+++ b/install.yml
@@ -1,17 +1,24 @@
 ---
 - hosts: aws_ec2
   remote_user: ec2-user
+  gather_facts: yes
   become: yes
+  vars:
+    - version: tomcat-10.0.18
   tasks:
-  - name: Install Java 8 CentOS
-    yum:
-      name: java-1.8.0-openjdk
-      state: present
-  - name: Install httpd service
-    yum:
-      name: httpd
-      state: present
-  - name: Start httpd service
-    service:
-      name: httpd
-      state: restarted
+    - name: install java
+      yum:
+        name: java
+        state: latest
+    - name: download pkg
+      get_url:
+         url: https://dlcdn.apache.org/tomcat/tomcat-10/v10.0.18/bin/apache-"{{ tomcat-10.0.18 }}.tar.gz"
+         dest: /usr/local
+         validate_certs: no
+    - name: extracting tomcat file
+      unarchive:
+         src: /usr/local/apache-tomcat-"{{ tomcat-10.0.18 }}.tar.gz"
+         dest: /usr/local
+         remote_src: yes
+    - name: start tomcat service
+      shell: nohup /usr/local/apache-"{{ tomcat-10.0.18 }}/bin/startup.sh"
