--- a/install.yml
+++ b/install.yml
@@ -20,5 +20,9 @@
          src: /usr/local/apache-tomcat-10.0.18.tar.gz
          dest: /usr/local
          remote_src: yes
+    - name: copy the war file
+      copy:
+         src: /home/jenkins-slave-01/workspace/ch-5/target/simple-app-3.0.0-SNAPSHOT.war
+         dest: /usr/local/apache-tomcat-10.0.18/webapps
     - name: start tomcat service
       shell: nohup /usr/local/apache-tomcat-10.0.18/bin/startup.sh
