--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -1,7 +1,15 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  creationTimestamp: null
+  name: devstack
+
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nodeapp-deployment
+  namespace: devstack
   labels:
     app: nodeapp
 spec:
@@ -27,6 +35,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nodeapp-service
+  namespace: devstack
 spec:
   selector:
     app: nodeapp
