--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -40,7 +40,7 @@ metadata:
 spec:
   selector:
     app: nodeapp
-  type: NodePort
+  type: LoadBalancer
   ports:
   - protocol: TCP
     port: 5000
